--- a/r_package/bestcost/DESCRIPTION
+++ b/r_package/bestcost/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: bestcost
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Version: 0.0.0.1
+Author: Alberto Castro & Axel Luyten
+Maintainer: TBD
+Description: TBD
+License: TBD
 Encoding: UTF-8
 LazyData: true
