Improving description file

--- a/r_package/bestcost/DESCRIPTION
+++ b/r_package/bestcost/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: bestcost
-Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.0.0.1
-Author: Alberto Castro & Axel Luyten
+Author: Alberto Castro [aut, cre], Axel Luyten [aut, cre]
 Maintainer: TBD
-Description: TBD
-License: TBD
+Description: R package developed withing the framework of the EU project BEST-COST to quantify and monetize health impacts of environmental stressors
+License: GPL
 Encoding: UTF-8
 LazyData: true
