updated help files using roxygenize()

--- a/r_package/bestcost/DESCRIPTION
+++ b/r_package/bestcost/DESCRIPTION
@@ -7,3 +7,4 @@ Description: R package developed withing the framework of the EU project BEST-CO
 License: GPL
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
