--- a/r_package/bestcost/DESCRIPTION
+++ b/r_package/bestcost/DESCRIPTION
@@ -7,3 +7,5 @@ Description: This R package was developed within the framework of the EU project
 License: GPL
 Encoding: UTF-8
 RoxygenNote: 7.2.3
+Depends: 
+    R (>= 2.10)
