Fix error "Error: 'get_pop_impact' is not an exported object from 'namespace:bestcost'" by adding "@export" to get_pop_impact and by running devtools::document() to update NAMESPACE

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -4,6 +4,7 @@ export(assess_impact_absolute_risk)
 export(assess_impact_single)
 export(assess_mortality_lifetable)
 export(get_paf)
+export(get_pop_impact)
 export(get_prob_dying)
 export(rescale_crf)
 import(dplyr)
