Replaced "crf" with "rr"

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -13,7 +13,7 @@ export(get_pop_impact)
 export(get_prob_dying)
 export(get_yll)
 export(move_rows_up)
-export(rescale_crf)
+export(rescale_rr)
 import(dplyr)
 import(purrr)
 import(tibble)
