--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -6,13 +6,13 @@ export(attribute_mortality_lifetable_rr)
 export(get_deaths)
 export(get_paf)
 export(get_popOverTime)
-export(get_popOverTime_noAP)
-export(get_popSingleYear_withAP)
 export(get_pop_diff)
 export(get_pop_impact)
 export(get_prob_dying)
 export(get_yll)
 export(move_rows_up)
+export(project_pop_noExp)
+export(project_pop_withExp)
 export(rescale_rr)
 import(dplyr)
 import(purrr)
