--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -5,12 +5,12 @@ export(attribute_health_singlebhd_rr)
 export(attribute_mortality_lifetable_rr)
 export(get_deaths)
 export(get_paf)
-export(get_popOverTime)
 export(get_pop_diff)
 export(get_pop_impact)
 export(get_prob_dying)
 export(get_yll)
 export(move_rows_up)
+export(project_pop)
 export(project_pop_noExp)
 export(project_pop_withExp)
 export(rescale_rr)
