--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -3,6 +3,7 @@
 export(attribute_health_singlebhd_ar)
 export(attribute_health_singlebhd_rr)
 export(attribute_mortality_lifetable_rr)
+export(attribute_yld_rr)
 export(get_deaths)
 export(get_paf)
 export(get_pop_diff)
