--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -9,12 +9,12 @@ export(get_paf)
 export(get_pop_diff)
 export(get_pop_impact)
 export(get_prob_dying)
+export(get_risk)
 export(get_yll)
 export(move_rows_up)
 export(project_pop)
 export(project_pop_noExp)
 export(project_pop_withExp)
-export(rescale_rr)
 import(dplyr)
 import(purrr)
 import(tibble)
