Re-coded the function "attribute_yld_singlebhd_rr"

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -4,7 +4,7 @@ export(add_info)
 export(attribute_health_singlebhd_ar)
 export(attribute_health_singlebhd_rr)
 export(attribute_mortality_lifetable_rr)
-export(attribute_yld_rr)
+export(attribute_yld_singlebhd_rr)
 export(get_deaths)
 export(get_paf)
 export(get_pop_diff)
