I commit because I have to check where is the last version of main

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -6,6 +6,7 @@ export(attribute_health_singlebhd_rr)
 export(attribute_mortality_lifetable_rr)
 export(attribute_yld_rr)
 export(get_deaths)
+export(get_input_and_paf)
 export(get_paf)
 export(get_pop_diff)
 export(get_pop_impact)
