--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -5,9 +5,10 @@ export(attribute_health_singlebhd_ar)
 export(attribute_health_singlebhd_rr)
 export(attribute_mortality_lifetable_rr)
 export(attribute_yld_rr)
+export(compile_input)
 export(get_deaths)
-export(get_input_and_paf)
 export(get_paf)
+export(get_paf_from_input)
 export(get_pop_diff)
 export(get_pop_impact)
 export(get_prob_dying)
