get_risk_and_paf instead() of get_paf_from_input()

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -8,11 +8,11 @@ export(attribute_yld_rr)
 export(compile_input)
 export(get_deaths)
 export(get_paf)
-export(get_paf_from_input)
 export(get_pop_diff)
 export(get_pop_impact)
 export(get_prob_dying)
 export(get_risk)
+export(get_risk_and_paf)
 export(get_yll)
 export(move_rows_up)
 export(project_pop)
