--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -6,6 +6,7 @@ export(attribute_health_singlebhd_ar)
 export(attribute_health_singlebhd_rr)
 export(attribute_yld_rr)
 export(attribute_yll_lifetable_rr)
+export(compare_health_singlebhd_rr)
 export(compile_input)
 export(get_deaths)
 export(get_paf)
