--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -10,6 +10,7 @@ export(compare_health_singlebhd_rr)
 export(compile_input)
 export(get_deaths)
 export(get_paf)
+export(get_pif)
 export(get_pop_diff)
 export(get_pop_impact)
 export(get_prob_dying)
