Added min_age & max_age checks in fct "compile_input" to resolve 0 impact outcome issue

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -4,7 +4,9 @@ export(add_info)
 export(attribute_deaths_lifetable_rr)
 export(attribute_health_singlebhd_ar)
 export(attribute_health_singlebhd_rr)
+export(attribute_yld_lifetable_rr)
 export(attribute_yld_rr)
+export(attribute_yld_singlebhd_rr)
 export(attribute_yll_lifetable_rr)
 export(compare_health_singlebhd_rr)
 export(compile_input)
