--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -8,6 +8,7 @@ export(attribute_yld_lifetable_rr)
 export(attribute_yld_rr)
 export(attribute_yld_singlebhd_rr)
 export(attribute_yll_lifetable_rr)
+export(compare_health_ar)
 export(compare_health_singlebhd_rr)
 export(compile_input)
 export(get_deaths)
