--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -18,6 +18,7 @@ export(get_pop_impact)
 export(get_prob_dying)
 export(get_risk)
 export(get_risk_and_paf)
+export(get_yld)
 export(get_yll)
 export(move_rows_up)
 export(project_pop)
