fixies in names and documentation

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -9,6 +9,7 @@ export(attribute_yld_rr)
 export(attribute_yld_singlebhd_rr)
 export(attribute_yll_lifetable_rr)
 export(compare_health_ar)
+export(compare_health_lifetable_rr)
 export(compare_health_singlebhd_rr)
 export(compile_input)
 export(get_deaths)
@@ -19,6 +20,7 @@ export(get_pop_impact)
 export(get_prob_dying)
 export(get_risk)
 export(get_risk_and_paf)
+export(get_risk_and_pif)
 export(get_yld)
 export(get_yll)
 export(move_rows_up)
