all compare_ functions developed and working

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -11,6 +11,9 @@ export(attribute_yll_lifetable_rr)
 export(compare_deaths_lifetable_rr)
 export(compare_health_ar)
 export(compare_health_singlebhd_rr)
+export(compare_yld_lifetable_rr)
+export(compare_yld_singlebhd_rr)
+export(compare_yll_lifetable_rr)
 export(compile_input)
 export(get_deaths)
 export(get_paf)
