--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -15,6 +15,7 @@ export(compare_yld_lifetable_rr)
 export(compare_yld_singlebhd_rr)
 export(compare_yll_lifetable_rr)
 export(compile_input)
+export(compile_lifetable_pop)
 export(get_deaths)
 export(get_paf)
 export(get_pif)
