--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -16,11 +16,11 @@ export(compare_yll_lifetable_rr)
 export(compile_input)
 export(compile_lifetable_pop)
 export(get_deaths)
-export(get_one_year_prob_dying)
 export(get_paf)
 export(get_pif)
 export(get_pop_diff)
 export(get_pop_impact)
+export(get_prob_dying_by_single_age)
 export(get_risk)
 export(get_risk_and_paf)
 export(get_risk_and_pif)
