--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -4,6 +4,7 @@ export(add_info)
 export(attribute_deaths_lifetable_rr)
 export(attribute_health_singlebhd)
 export(attribute_health_singlebhd_ar)
+export(attribute_health_singlebhd_fun)
 export(attribute_health_singlebhd_rr)
 export(attribute_yld_lifetable_rr)
 export(attribute_yld_singlebhd_rr)
@@ -17,6 +18,8 @@ export(compare_yll_lifetable_rr)
 export(compile_input)
 export(compile_lifetable_pop)
 export(get_deaths)
+export(get_impact)
+export(get_output)
 export(get_paf)
 export(get_pif)
 export(get_pop_diff)
