Function compare() including the first type compare_function

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -9,6 +9,7 @@ export(attribute_health_singlebhd_rr)
 export(attribute_yld_lifetable_rr)
 export(attribute_yld_singlebhd_rr)
 export(attribute_yll_lifetable_rr)
+export(compare)
 export(compare_deaths_lifetable_rr)
 export(compare_health_ar)
 export(compare_health_singlebhd_rr)
