--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -2,11 +2,13 @@
 
 export(add_info)
 export(attribute_deaths_lifetable_rr)
+export(attribute_deaths_lifetable_rr_copy)
 export(attribute_health_singlebhd_ar)
 export(attribute_health_singlebhd_rr)
 export(attribute_yld_lifetable_rr)
 export(attribute_yld_singlebhd_rr)
 export(attribute_yll_lifetable_rr)
+export(attribute_yll_lifetable_rr_copy)
 export(compare_deaths_lifetable_rr)
 export(compare_health_ar)
 export(compare_health_singlebhd_rr)
@@ -20,6 +22,7 @@ export(get_paf)
 export(get_pif)
 export(get_pop_diff)
 export(get_pop_impact)
+export(get_pop_impact_copy)
 export(get_prob_dying_by_single_age)
 export(get_risk)
 export(get_risk_and_paf)
@@ -28,8 +31,11 @@ export(get_yld)
 export(get_yll)
 export(move_rows_up)
 export(project_pop)
+export(project_pop_copy)
 export(project_pop_noExp)
+export(project_pop_noExp_copy)
 export(project_pop_withExp)
+export(project_pop_withExp_copy)
 import(dplyr)
 import(purrr)
 import(tibble)
