Setup for restructuring "get_pop_impact()"
Following "copy" functions were created: "attribute_copy", which calls "get_impact_copy", which calls "get_pop_impact_copy", which will be adapted.

Goal: "get_pop_impact_copy" should not call other (nested) functions. Instead, all calculations should happen in the function code of "get_pop_impact_copy".

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_info)
 export(attribute)
+export(attribute_copy)
 export(attribute_deaths_lifetable_rr)
 export(attribute_health_singlebhd)
 export(attribute_health_singlebhd_ar)
@@ -20,11 +21,13 @@ export(compile_input)
 export(compile_lifetable_pop)
 export(get_deaths)
 export(get_impact)
+export(get_impact_copy)
 export(get_output)
 export(get_paf)
 export(get_pif)
 export(get_pop_diff)
 export(get_pop_impact)
+export(get_pop_impact_copy)
 export(get_prob_dying_by_single_age)
 export(get_risk)
 export(get_risk_and_paf)
