Setup for restructuring "get_pop_impact()" PART 2
Created the copy functions "project_pop_copy", "project_pop_noExp_copy" and "project_pop_withExp_copy", which will be adapted step-by-step

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -36,8 +36,11 @@ export(get_yld)
 export(get_yll)
 export(move_rows_up)
 export(project_pop)
+export(project_pop_copy)
 export(project_pop_noExp)
+export(project_pop_noExp_copy)
 export(project_pop_withExp)
+export(project_pop_withExp_copy)
 import(dplyr)
 import(purrr)
 import(tibble)
