--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -4,9 +4,9 @@ export(add_info)
 export(attribute)
 export(attribute_copy)
 export(attribute_deaths_lifetable_rr)
+export(attribute_health)
 export(attribute_health_singlebhd)
 export(attribute_health_singlebhd_ar)
-export(attribute_health_singlebhd_rr)
 export(attribute_yld_lifetable_rr)
 export(attribute_yld_singlebhd_rr)
 export(attribute_yll_lifetable_rr)
