attribute_health_ar() as wrapper function of attribute()

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -5,8 +5,7 @@ export(attribute)
 export(attribute_copy)
 export(attribute_deaths_lifetable_rr)
 export(attribute_health)
-export(attribute_health_singlebhd)
-export(attribute_health_singlebhd_ar)
+export(attribute_health_ar)
 export(attribute_yld_lifetable_rr)
 export(attribute_yld_singlebhd_rr)
 export(attribute_yll_lifetable_rr)
