--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -5,8 +5,8 @@ export(attribute_copy)
 export(attribute_deaths_lifetable_rr)
 export(attribute_health)
 export(attribute_health_ar)
+export(attribute_yld_from_prevalence)
 export(attribute_yld_lifetable_rr)
-export(attribute_yld_singlebhd_rr)
 export(attribute_yll_lifetable_rr)
 export(compare)
 export(compare_deaths_lifetable_rr)
@@ -15,6 +15,7 @@ export(compare_health_singlebhd_rr)
 export(compare_yld_lifetable_rr)
 export(compare_yld_singlebhd_rr)
 export(compare_yll_lifetable_rr)
+export(compile_input)
 export(get_paf)
 export(get_pif)
 export(get_prob_dying_by_single_age)
