compare_health() as wrapper function of compare()

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -10,8 +10,8 @@ export(attribute_yld_from_prevalence)
 export(attribute_yll_from_lifetable)
 export(compare)
 export(compare_deaths_lifetable_rr)
+export(compare_health)
 export(compare_health_ar)
-export(compare_health_singlebhd_rr)
 export(compare_yld_lifetable_rr)
 export(compare_yld_singlebhd_rr)
 export(compare_yll_lifetable_rr)
