--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -17,6 +17,7 @@ export(compare_yll_from_lifetable)
 export(compile_input)
 export(get_paf)
 export(get_pif)
+export(get_pop_fraction)
 export(get_prob_dying_by_single_age)
 export(get_risk)
 import(dplyr)
