Prepare implementation of AirQ+ YLL method without interfering with existing calculation approach
- The mask function "attribute_yll_from_lifetable_airqplus()" is created, which sets the argument health_metric = "yll_from_lifetable_airqplus", but is otherwise identical to "attribute_yll_from_lifetable"
- "get_impact()" calls "get_pop_impact" when "health_metric=="yll_from_lifetable_airqplus"
- In "get_pop_impact", a if-statement is added which is triggered when the argument outcome metric=="yll_from_lifetable_airqplus". The space within this if statement can be used as the sandbox to implement the AirQ+ lifetable method. If the argument outcome metric is not "yll_from_lifetable_airqplus" the existing code for determining YLL is executed.

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -7,6 +7,7 @@ export(attribute_health_ar)
 export(attribute_yld_from_lifetable)
 export(attribute_yld_from_prevalence)
 export(attribute_yll_from_lifetable)
+export(attribute_yll_from_lifetable_airqplus)
 export(compare)
 export(compare_deaths_from_lifetable)
 export(compare_health)
