daly_from_lifetable now working in compare() and new function compare_daly_from_lifetable() has been created

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -9,6 +9,7 @@ export(attribute_yld_from_lifetable)
 export(attribute_yld_from_prevalence)
 export(attribute_yll_from_lifetable)
 export(compare)
+export(compare_daly_from_lifetable)
 export(compare_deaths_from_lifetable)
 export(compare_health)
 export(compare_health_ar)
