- Named functions used in `map()` - Removed mask function `attribute_yll_from_lifetable_airqplus()` - Moved AirQ+ output Excel - Updated package documentation (`documen()`)

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -7,7 +7,6 @@ export(attribute_health_ar)
 export(attribute_yld_from_lifetable)
 export(attribute_yld_from_prevalence)
 export(attribute_yll_from_lifetable)
-export(attribute_yll_from_lifetable_airqplus)
 export(compare)
 export(compare_deaths_from_lifetable)
 export(compare_health)
@@ -23,4 +22,5 @@ export(get_prob_dying_by_single_age)
 export(get_risk)
 import(dplyr)
 import(purrr)
+import(rlang)
 import(tidyr)
