Removed death probability arguments and related code
The function ´get_prob_dying_by_single_age()´has been archived under ´../testing/archive´

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -20,8 +20,8 @@ export(compile_input)
 export(get_paf)
 export(get_pif)
 export(get_pop_fraction)
-export(get_prob_dying_by_single_age)
 export(get_risk)
 import(dplyr)
 import(purrr)
 import(tidyr)
+importFrom(stringr,str_replace)
