--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -21,6 +21,7 @@ export(get_paf)
 export(get_pif)
 export(get_pop_fraction)
 export(get_risk)
+export(monetize)
 import(dplyr)
 import(purrr)
 import(tidyr)
