--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -17,12 +17,14 @@ export(compare_yld_from_lifetable)
 export(compare_yld_from_prevalence)
 export(compare_yll_from_lifetable)
 export(compile_input)
+export(get_ci)
 export(get_paf)
 export(get_pif)
 export(get_pop_fraction)
 export(get_risk)
 export(monetize)
 import(dplyr)
+import(prevalence)
 import(purrr)
 import(tidyr)
 importFrom(stringr,str_replace)
