New Rd files after renaming monetize with include_cost

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -22,7 +22,7 @@ export(get_paf)
 export(get_pif)
 export(get_pop_fraction)
 export(get_risk)
-export(monetize)
+export(include_cost)
 import(dplyr)
 import(purrr)
 import(tidyr)
