include_social() with a simplified approach (impact multiplied by deprivation index)

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -23,6 +23,7 @@ export(get_pif)
 export(get_pop_fraction)
 export(get_risk)
 export(include_cost)
+export(include_social)
 import(dplyr)
 import(purrr)
 import(tidyr)
