--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -24,6 +24,7 @@ export(get_pop_fraction)
 export(get_risk)
 export(include_cost)
 export(include_social)
+export(prepare_exposure_data)
 import(dplyr)
 import(purrr)
 import(tidyr)
