--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -18,6 +18,7 @@ export(compare_yld_from_prevalence)
 export(compare_yll_from_lifetable)
 export(compile_input)
 export(get_ci)
+export(get_ci_old)
 export(get_paf)
 export(get_pif)
 export(get_pop_fraction)
