Fix `description` section in function help pages

--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -31,3 +31,4 @@ import(tidyr)
 importFrom(prevalence,betaExpert)
 importFrom(stats,quantile)
 importFrom(stringr,str_replace)
+importFrom(tibble,tibble)
