rename of files and folders

--- a/r_package/healthiar/DESCRIPTION
+++ b/r_package/healthiar/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: bestcost
+Package: healthiar
 Title: Quantification and monetarization of health impacts of environmental stressors
 Version: 0.0.0.1
 Author: Alberto Castro [aut, cre], Axel Luyten [aut, cre]
