--- a/r_package/bestcost/NAMESPACE
+++ b/r_package/bestcost/NAMESPACE
@@ -27,5 +27,7 @@ export(include_social)
 export(prepare_exposure_data)
 import(dplyr)
 import(purrr)
+import(sf)
+import(terra)
 import(tidyr)
 importFrom(stringr,str_replace)
