Removed warning when loading `healthiar` package
Warning:
`Warning message:
replacing previous import ‘tidyr::extract’ by ‘terra::extract’ when loading ‘healthiar’ `

--- a/r_package/healthiar/NAMESPACE
+++ b/r_package/healthiar/NAMESPACE
@@ -28,8 +28,11 @@ export(include_summary_uncertainty)
 export(prepare_exposure_data)
 import(dplyr)
 import(purrr)
-import(tidyr)
 importFrom(stats,quantile)
 importFrom(stringr,str_replace)
 importFrom(terra,extract)
 importFrom(tibble,tibble)
+importFrom(tidyr,crossing)
+importFrom(tidyr,nest)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,unnest)
