--- a/r_package/healthiar/NAMESPACE
+++ b/r_package/healthiar/NAMESPACE
@@ -35,4 +35,6 @@ importFrom(tibble,tibble)
 importFrom(tidyr,crossing)
 importFrom(tidyr,nest)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
+importFrom(tidyr,unnest_wider)
