Added `compare_yld_incidence_based_approach` & associated examples in `testing_Rpackage.Rmd`

--- a/r_package/healthiar/NAMESPACE
+++ b/r_package/healthiar/NAMESPACE
@@ -15,6 +15,7 @@ export(compare_deaths_from_lifetable)
 export(compare_health)
 export(compare_health_ar)
 export(compare_yld_from_lifetable)
+export(compare_yld_incidence_based_approach)
 export(compare_yld_prevalence_based_approach)
 export(compare_yll_from_lifetable)
 export(compile_input)
