--- a/r_package/healthiar/NAMESPACE
+++ b/r_package/healthiar/NAMESPACE
@@ -4,15 +4,15 @@ export(attribute)
 export(attribute_daly_from_lifetable)
 export(attribute_deaths_from_lifetable)
 export(attribute_health)
+export(attribute_yld)
 export(attribute_yld_from_lifetable)
-export(attribute_yld_from_prevalence)
 export(attribute_yll_from_lifetable)
 export(compare)
 export(compare_daly_from_lifetable)
 export(compare_deaths_from_lifetable)
 export(compare_health)
+export(compare_yld)
 export(compare_yld_from_lifetable)
-export(compare_yld_from_prevalence)
 export(compare_yll_from_lifetable)
 export(compile_input)
 export(get_paf)
