Update of namespace with get_discount_factor

--- a/r_package/healthiar/NAMESPACE
+++ b/r_package/healthiar/NAMESPACE
@@ -15,6 +15,7 @@ export(compare_yld)
 export(compare_yld_from_lifetable)
 export(compare_yll_from_lifetable)
 export(compile_input)
+export(get_discount_factor)
 export(get_paf)
 export(get_pif)
 export(get_pop_fraction)
